Fix: separate overflow-x on body only, remove from html to enable sticky

--- a/src/css/root.css
+++ b/src/css/root.css
@@ -44,13 +44,16 @@
     
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
-  body,
   html {
     margin: 0;
     padding: 0;
     font-size: 100%;
     font-family: 'Roboto', Arial, sans-serif;
     color: var(--bodyTextColor);
+  }
+  body {
+    margin: 0;
+    padding: 0;
     overflow-x: hidden;
   }
   *,
